2004-08-03 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelSwap) added a call to
	gridRemoveTwoFaceCell. Added an extra gridCellHasGhostNode check
	for local only (queue==NULL) runs.

2004-08-03 15:55 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) will remove a cell with
	two faces with the same face Id and swap the face diagonal.

2004-08-03 14:20 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridwritetecplotsurfacezone_) now dumps out
	negative cells or cells with four nodes on boundary after the
	surface.

2004-08-02 16:21 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelRelaxNegativeCells) started on a
	parallel version of gridRelaxNegativeCells, but
	gridSmoothVolumeNearNode needs to also be parallelized to
	be consistant. The extra ghost passes should not hurt that bad.
	* src/gridfortran.c (gridparallelrelaxneg_) now calls
	gridParallelRelaxNegativeCells.

2004-08-02 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridtestcadparameters_) increased node and
	parameter tolerences. Project to face first to get the edge xyz.

2004-08-02 15:39 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridRelaxNegativeCells) added a bool argument to
	optionally dump out tecplot surface and negative volume plots.

2004-07-31 16:22 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelrelaxneg_) exposed
	gridRelaxNegativeCells.

2004-07-31 16:05 Mike Park  <mike.park@nasa.gov>

	* src/main.c put in calls to gridRelaxNegativeCells and made the
	gridmove test harder.

2004-07-31 15:06 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridRelaxNegativeCells) finds negative cells and
	calls gridSmoothVolumeNearNode in vicinity.
	* src/gridcad.c (gridSmoothVolumeNearNode) calls
	gridSmoothNodeVolume up to two cells out.
	
2004-07-31 14:38 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveRelaxation) sequential generalized grid